Close the last 16 backend smells: Sonar at 0 code_smells
S108 (empty block): fixed for real this time -- the comment needs to be
nested inside the braces, not floating above the case arm (S1186 had the
same gotcha last tanda).

S2386: DocumentableSale.STATUSES wrapped in Collections.unmodifiableSet;
a public static final field holding a mutable LinkedHashSet let any caller
corrupt shared state.

S5785, S2699: assertNotNull over a manual null-check with assertTrue; a test
that swallowed a mail-server failure with no assertion now wraps the call in
assertDoesNotThrow so its own @DisplayName claim is actually checked.

S3398: EmailLayout.escape() moved into Builder, its only caller.

S1172: PublicationService.dispatchInternal's unused actorUserId parameter
removed. The public dispatch()/retry() methods keep it -- it's real API
surface consumed by the controller for the same actor-tracking pattern
reject()/approve() already use, just never wired into PublicationAttemptEntity.
That's a product gap, not a smell to paper over here.

S2143: JwtTokenProvider now computes all token timestamps via Instant,
converting to Date only where JJWT's builder API demands it. One residual
file-level finding (no line to attach @SuppressWarnings to) resolved
won't-fix in SonarQube directly, with the same justification.

S2187: deleted an empty test class for a plain six-value enum with no
behaviour to test.

S7158, S2147, S1488, S5673: StringBuilder.isEmpty(), merged a redundant
narrower catch into the broader one that already covered it, direct return
instead of a pass-through variable, @Service over @Component.

S1168: ProductController.toVariantInputs kept returning null on purpose --
UpdateProductUseCase reads null as "leave variants untouched" on a partial
update, and List.of() would have silently wiped variants on any update that
omits the field. Suppressed with that explanation instead of "fixing" it
into a real bug.

S1130/S112: SecurityConfig.filterChain's `throws Exception` was 